--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
-  <h2>Este es el Dashboard</h2>
+<div>
+  <h2>Dashboard</h2>
+  <p>Bienvenido, {{ user?.name }}!</p>
+  <button (click)="logout()">Cerrar Sesión</button>
+</div>
