--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,24 +1,1 @@
-<body class="font-sans antialiased">
-  <div class="min-h-screen bg-gray-100 flex">
-
-    <!-- Sidebar fijo -->
-    <div class="fixed inset-y-0 left-0 w-64 bg-gray-800 text-white p-6 h-full z-50">
-      <app-sidebar></app-sidebar> <!-- Sidebar en Angular -->
-    </div>
-
-    <!-- Contenedor de la página -->
-    <div class="flex-1 flex flex-col ml-64">
-      <!-- Navbar -->
-      <app-navbar></app-navbar>
-
-      <!-- Contenido dinámico -->
-      <main class="p-6">
-        <router-outlet></router-outlet> <!-- 🔥 Aquí solo se cargará ProductosComponent -->
-      </main>
-
-      <!-- Footer -->
-      <app-footer></app-footer>
-    </div>
-
-  </div>
-</body>
+<router-outlet></router-outlet> <!-- 🔥 Aquí se cargarán los layouts -->
