--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -1,18 +1,23 @@
-<aside class="w-50 h-screen bg-gray-900 shadow-lg text-white flex flex-col">
+<aside class="w-64 h-screen bg-gradient-to-br from-indigo-700 via-blue-800 to-purple-900 shadow-xl text-white flex flex-col">
   <div class="p-6 flex items-center space-x-3 border-b border-blue-800">
-    <h2 class="text-xl font-bold">Panel de Control</h2>
+    <h2 class="text-2xl font-bold">Panel de Control</h2>
   </div>
 
   <nav class="flex-1 p-4">
-    <ul class="space-y-2">
+    <ul class="space-y-3">
       <li>
-        <a [routerLink]="['/']" class="flex items-center space-x-3 p-3 rounded-lg hover:bg-blue-800 transition cursor-pointer">
-          <i class="fas fa-home"></i><span>Dashboard</span>
+        <a [routerLink]="['/']" class="flex items-center space-x-3 p-3 rounded-lg hover:bg-purple-700 transition cursor-pointer">
+          <i class="fas fa-home"></i><span class="text-lg">Dashboard</span>
         </a>
       </li>
       <li>
-        <a [routerLink]="['/productos']" class="flex items-center space-x-3 p-3 rounded-lg hover:bg-blue-800 transition cursor-pointer">
-          <i class="fas fa-box"></i><span>Productos</span>
+        <a [routerLink]="['/productos']" class="flex items-center space-x-3 p-3 rounded-lg hover:bg-purple-700 transition cursor-pointer">
+          <i class="fas fa-box"></i><span class="text-lg">Productos</span>
+        </a>
+      </li>
+      <li>
+        <a [routerLink]="['/users']" class="flex items-center space-x-3 p-3 rounded-lg hover:bg-purple-700 transition cursor-pointer">
+          <i class="fas fa-users"></i><span class="text-lg">Usuarios</span>
         </a>
       </li>
     </ul>
