--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="flex items-center justify-center min-h-screen bg-gradient-to-br from-blue-800 via-purple-700 to-blue-900">
-  <div class="bg-white bg-opacity-80 p-8 rounded-3xl shadow-2xl w-96 backdrop-blur-md">
+<div class="flex items-center justify-center min-h-screen bg-gray-50">
+  <div class="bg-gradient-to-br from-blue-500 via-purple-400 to-blue-500  bg-opacity-80 p-8 rounded-3xl shadow-2xl w-96 backdrop-blur-md">
     <h2 class="text-3xl font-extrabold text-center text-gray-900 mb-6">Iniciar Sesión</h2>
     <form (ngSubmit)="onSubmit()" class="space-y-6">
       <!-- Correo -->
