--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -1,5 +1,21 @@
 .navbar {
-    background-color: #333;
-    color: white;
-    padding: 10px 20px;
-  }
+  background-image: url('/images/bg.png'); /* Ruta correcta */
+  background-size: cover;
+  background-position: center;
+  color: white;
+  padding: 10px 20px;
+}
+
+.tmodulo-md {
+  margin-right: 20px;
+  display: block;
+  font-size: 1em;
+  font-weight: 900;
+  margin-top: 5px;
+  color: #0b2239;
+  text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
+}
+
+mat-toolbar {
+  height: 80px !important;
+}
