--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="bg-gradient-to-r from-blue-800 via-purple-900 to-blue-900 p-6 text-center text-white shadow-md">
-  <p>&copy; 2025 Mi Aplicación</p>
+<footer class="bg-gray-900 p-6 text-center text-white shadow-md w-full z-50">
+  <p>&copy; 2025 CRUD Basico Laravel Angular SQLServer</p>
 </footer>
