--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,37 +1,42 @@
-<div class="flex items-center justify-center min-h-screen bg-gray-50">
-  <div class="bg-gradient-to-br from-blue-500 via-purple-400 to-blue-500  bg-opacity-80 p-8 rounded-3xl shadow-2xl w-96 backdrop-blur-md">
-    <h2 class="text-3xl font-extrabold text-center text-gray-900 mb-6">Iniciar Sesión</h2>
+<app-loader [show]="isLoading"></app-loader>
+
+<div class="flex items-center justify-center min-h-screen bg-gray-100">
+  <div *ngIf="isLoading">
+    <app-loader [show]="isLoading"></app-loader>
+  </div>
+  <div class="bg-gradient-to-br from-blue-500 via-purple-500 to-blue-600 bg-opacity-90 p-6 rounded-2xl shadow-xl w-full sm:w-96 backdrop-blur-md">
+    <h2 class="text-2xl sm:text-3xl font-extrabold text-center text-gray-800 mb-6">Iniciar Sesión</h2>
     <form (ngSubmit)="onSubmit()" class="space-y-6">
       <!-- Correo -->
       <div>
-        <label for="email" class="block text-lg font-semibold text-gray-800 mb-2">Correo electrónico:</label>
+        <label for="email" class="block text-sm sm:text-base font-semibold text-gray-700 mb-2">Correo electrónico:</label>
         <input
           type="email"
           [(ngModel)]="user.email"
           name="email"
           placeholder="Correo"
           required
-          class="w-full px-5 py-3 border border-gray-300 rounded-xl shadow-md focus:outline-none focus:ring-2 focus:ring-blue-500 text-gray-800 bg-white placeholder-gray-400"
+          class="w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 text-gray-700 bg-white placeholder-gray-400 text-sm sm:text-base"
         />
       </div>
 
       <!-- Contraseña -->
       <div>
-        <label for="password" class="block text-lg font-semibold text-gray-800 mb-2">Contraseña:</label>
+        <label for="password" class="block text-sm sm:text-base font-semibold text-gray-700 mb-2">Contraseña:</label>
         <input
           type="password"
           [(ngModel)]="user.password"
           name="password"
           placeholder="Contraseña"
           required
-          class="w-full px-5 py-3 border border-gray-300 rounded-xl shadow-md focus:outline-none focus:ring-2 focus:ring-blue-500 text-gray-800 bg-white placeholder-gray-400"
+          class="w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 text-gray-700 bg-white placeholder-gray-400 text-sm sm:text-base"
         />
       </div>
 
       <!-- Botón de inicio de sesión -->
       <button
         type="submit"
-        class="w-full bg-gradient-to-r from-purple-600 via-purple-700 to-purple-800 hover:from-purple-700 hover:via-purple-800 hover:to-purple-900 text-white font-bold py-3 px-4 rounded-xl shadow-md transition duration-300 transform hover:scale-105"
+        class="w-full bg-gradient-to-r from-purple-600 via-purple-700 to-purple-800 hover:from-purple-700 hover:via-purple-800 hover:to-purple-900 text-white font-bold py-3 px-4 rounded-lg shadow-md transition duration-300 transform hover:scale-105"
       >
         Iniciar Sesión
       </button>
