--- a/frontend/src/app/components/users/users-table/users-table.component.html
+++ b/frontend/src/app/components/users/users-table/users-table.component.html
@@ -1,23 +1,27 @@
-<div class="p-6 bg-gray-100 rounded-2xl shadow-lg">
+<app-loader [show]="isLoading"></app-loader>
+
+<div *ngIf="!isLoading" class="p-1 bg-gray-100 rounded-2xl shadow-lg">
   <h2 class="text-2xl font-bold mb-6 text-gray-800 text-center">Lista de Usuarios</h2>
 
+  <!-- Botón Agregar Usuario -->
   <button
     mat-raised-button
     color="primary"
     (click)="openDialog()"
-    class="mb-4 flex items-center space-x-2 bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700 text-white px-4 py-2 rounded-lg shadow-md transition duration-300"
+    class="mb-4 flex items-center space-x-2 bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700 text-white px-4 py-2 rounded-lg shadow-md transition duration-300 w-full sm:w-auto"
   >
-    <i class="fas fa-user-plus"></i>
-    <span>Agregar Usuario</span>
+    <i class="fas fa-user"></i>
+    <span>+ Agregar Usuario</span>
   </button>
 
+  <!-- Contenedor de la tabla -->
   <div class="overflow-x-auto">
-    <table mat-table [dataSource]="users" class="w-full bg-white rounded-lg shadow-md">
+    <table mat-table [dataSource]="users" class="min-w-full bg-white rounded-lg shadow-md">
       
-      <!-- ID -->
+      <!-- ID (oculto en móviles) -->
       <ng-container matColumnDef="id">
-        <td mat-header-cell *matHeaderCellDef class="bg-gray-800 text-white py-3 px-4 text-center">N°</td>
-        <td mat-cell *matCellDef="let user; let i = index" class="py-3 px-4 text-center">{{ i + 1 }}</td>
+        <td mat-header-cell *matHeaderCellDef class="bg-gray-800 text-white py-3 px-4 text-center hidden sm:table-cell">N°</td>
+        <td mat-cell *matCellDef="let user; let i = index" class="py-3 px-4 text-center hidden sm:table-cell">{{ i + 1 }}</td>
       </ng-container>      
 
       <!-- Nombre -->
@@ -43,10 +47,10 @@
         </td>        
       </ng-container>
 
-      <!-- Estado -->
+      <!-- Estado (oculto en móviles) -->
       <ng-container matColumnDef="is_active">
-        <td mat-header-cell *matHeaderCellDef class="bg-gray-800 text-white py-3 px-4 text-center">Estado</td>
-        <td mat-cell *matCellDef="let user" class="py-3 px-4 text-center">
+        <td mat-header-cell *matHeaderCellDef class="bg-gray-800 text-white py-3 px-4 text-center hidden sm:table-cell">Estado</td>
+        <td mat-cell *matCellDef="let user" class="py-3 px-4 text-center hidden sm:table-cell">
           <span class="px-3 py-1 rounded-full text-white text-sm font-semibold"
             [ngClass]="{ 'bg-green-600': user.is_active, 'bg-red-600': !user.is_active }">
             {{ user.is_active ? 'Activo' : 'Inactivo' }}
